--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,9 +41,13 @@ body {
 }
 .navigaton ul li {
   position: relative;
+  width: 100%;
   list-style: none;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
 }
-.navigaton ul li:hover {
+.navigaton ul li:hover,
+.navigaton ul li.hovered {
   background-color: var(--white);
 }
 
@@ -60,7 +64,8 @@ body {
   color: var(--white);
 }
 
-.navigaton ul li:hover a {
+.navigaton ul li:hover a,
+.navigaton ul li.hovered a {
   color: var(--blue);
 }
 .navigaton ul li a .icon {
@@ -83,4 +88,32 @@ body {
   line-height: 60px;
   text-align: start;
   white-space: nowrap;
+}
+
+.navigaton ul li:hover a::before,
+.navigaton ul li.hovered a::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: -50px;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow: 35px 35px 0 10px var(--white);
+  pointer-events: none;
+}
+
+.navigaton ul li:hover a::after,
+.navigaton ul li.hovered a::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: -50px;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow: 35px -35px 0 10px var(--white);
+  pointer-events: none;
 }
