--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
   width: 100%;
 }
 
-.navigaton {
+.navigation {
   position: fixed;
   width: 300px;
   height: 100%;
@@ -33,29 +33,32 @@ body {
   transition: 0.5s;
   overflow: hidden;
 }
-.navigaton ul {
+.navigation .active {
+  width: 80px;
+}
+.navigation ul {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
 }
-.navigaton ul li {
+.navigation ul li {
   position: relative;
   width: 100%;
   list-style: none;
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
 }
-.navigaton ul li:hover,
-.navigaton ul li.hovered {
+.navigation ul li:hover,
+.navigation ul li.hovered {
   background-color: var(--white);
 }
 
-.navigaton ul li:nth-child(1) {
+.navigation ul li:nth-child(1) {
   margin-bottom: 40px;
   pointer-events: none;
 }
-.navigaton ul li a {
+.navigation ul li a {
   position: relative;
   display: block;
   width: 100%;
@@ -64,11 +67,11 @@ body {
   color: var(--white);
 }
 
-.navigaton ul li:hover a,
-.navigaton ul li.hovered a {
+.navigation ul li:hover a,
+.navigation ul li.hovered a {
   color: var(--blue);
 }
-.navigaton ul li a .icon {
+.navigation ul li a .icon {
   position: relative;
   display: block;
   min-width: 60px;
@@ -76,11 +79,11 @@ body {
   line-height: 75px;
   text-align: center;
 }
-.navigaton ul li a .icon ion-icon {
+.navigation ul li a .icon ion-icon {
   font-size: 1.75rem;
 }
 
-.navigaton ul li a .title {
+.navigation ul li a .title {
   position: relative;
   display: block;
   padding: 0 10px;
@@ -90,8 +93,8 @@ body {
   white-space: nowrap;
 }
 
-.navigaton ul li:hover a::before,
-.navigaton ul li.hovered a::before {
+.navigation ul li:hover a::before,
+.navigation ul li.hovered a::before {
   content: "";
   position: absolute;
   right: 0;
@@ -104,8 +107,8 @@ body {
   pointer-events: none;
 }
 
-.navigaton ul li:hover a::after,
-.navigaton ul li.hovered a::after {
+.navigation ul li:hover a::after,
+.navigation ul li.hovered a::after {
   content: "";
   position: absolute;
   right: 0;
@@ -119,14 +122,18 @@ body {
 }
 /*==================================Main========================*/
 .main {
-  position: absolute;
   width: calc(100% -300px);
   left: 300px;
   min-height: 100vh;
   background: var(--white);
   transition: 0.5s;
 }
+.main .active {
+  width: calc(100% -80px);
+  left: 80px;
+}
 .topbar {
+  position: relative;
   width: 100%;
   height: 60px;
   display: flex;
@@ -135,16 +142,14 @@ body {
   padding: 0 10px;
 }
 .toggle {
-  position: relative;
   width: 60px;
   height: 60px;
   display: flex;
-  justify-content: center;
+  margin-left: 7.8cm;
   align-items: center;
   font-size: 2.5rem;
   cursor: pointer;
 }
-
 .search {
   position: relative;
   width: 400px;
@@ -165,14 +170,12 @@ body {
   outline: none;
   border: 1px solid var(--black2);
 }
-
 .search label ion-icon {
   position: absolute;
   top: 0;
   left: 10px;
   font-size: 1.2rem;
 }
-
 .user {
   position: relative;
   width: 40px;
