--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,8 @@ body {
 }
 /*==================================Main========================*/
 .main {
-  width: calc(100% -300px);
+  position: absolute;
+  width: calc(100% - 300px);
   left: 300px;
   min-height: 100vh;
   background: var(--white);
@@ -133,7 +134,6 @@ body {
   left: 80px;
 }
 .topbar {
-  position: relative;
   width: 100%;
   height: 60px;
   display: flex;
@@ -141,11 +141,13 @@ body {
   align-items: center;
   padding: 0 10px;
 }
+
 .toggle {
+  position: relative;
   width: 60px;
   height: 60px;
   display: flex;
-  margin-left: 7.8cm;
+  justify-content: center;
   align-items: center;
   font-size: 2.5rem;
   cursor: pointer;
@@ -192,4 +194,70 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+/*==============================cards=========================*/
+.cardBox {
+  position: relative;
+  width: 100%;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 30px;
+}
+
+.cardBox .card {
+  position: relative;
+  background: var(--white);
+  padding: 30px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+}
+.cardBox .card .numbers {
+  position: relative;
+  font-weight: 500;
+  font-size: 2.5rem;
+  color: var(--blue);
+}
+.cardBox .card .cardName {
+  color: var(--black2);
+  font-size: 1.1rem;
+  margin-top: 5px;
+}
+
+.cardBox .card .iconBx {
+  font-size: 3.5rem;
+  color: var(--black2);
+}
+
+.cardBox .card:hover {
+  background: var(--blue);
+}
+
+.cardBox .card:hover .numbers,
+.cardBox .card:hover .cardName,
+.cardBox .card:hover .iconBx {
+  color: var(--white);
+}
+
+.details {
+  position: relative;
+  width: 100%;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 30px;
+  margin-top: 10px;
+}
+
+.details .recentOrders {
+  position: relative;
+  display: grid;
+  min-height: 500px;
+  background: var(--white);
+  padding: 20px;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+  border-radius: 20px;
 }
